# GraphScope

./: .dockerignore  .gitignore  .gitmodules  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: flex-dummy.yaml  flex.yml  hqps-db-ci.yml  interactive.yml  pr-check.yml
analytical_engine/: CMakeLists.txt
analytical_engine/apps/java_pie/: java_pie_default_app.h  java_pie_default_context.h  (+2 more)
analytical_engine/java/: README.md  ffi-12-2.tar  grape_jvm_opts  pom.xml
analytical_engine/test/: giraph-runner.cc  giraph_runner.cc
coordinator/gscoordinator/: coordinator.py
docker/: Dockerfile  entrypoint.sh
flex/: .devcontainer.json  CMakeLists.txt  Dockerfile  README.md  main.cpp  tox.ini
flex/codegen/: gen_code_from_plan.cc
flex/docker/: hqps-server-base.Dockerfile
flex/engines/: CMakeLists.txt
flex/interactive/: README.md
flex/openapi/: openapi_interactive.yaml
flex/postgres/: CMakeLists.txt  copy_files.sh  postgresql.conf  standy_postgresql.conf
flex/postgres/backend/: CMakeCache.txt  CMakeLists.txt  Makefile
flex/postgres/backend/access/transam/: xact.c  xlog.c  xloginsert.c  xlogreader.c  xlogrecovery.c
flex/postgres/backend/backend/: Makefile
flex/postgres/backend/backend/libpq/: Makefile
flex/postgres/backend/backend/nodes/: Makefile
flex/postgres/backend/backend/port/: Makefile
flex/postgres/backend/backend/regex/: Makefile
flex/postgres/backend/backend/rewrite/: Makefile
flex/postgres/backend/bootstrap/: bootstrap.c
flex/postgres/backend/libpq/: CMakeLists.txt  be-gssapi-common.c
flex/postgres/backend/nodes/: CMakeLists.txt  copyfuncs.c
flex/postgres/backend/port/: CMakeLists.txt
flex/postgres/backend/postmaster/: flex_process.cc  flex_process_init.c  launch_backend.c  pg_wal_utils.cc  pg_wal_utils.h  post_master_main.c  postmaster.c  postmaster.h  startup.c  walwriter.c
flex/postgres/backend/regex/: CMakeLists.txt  regc_color.c
flex/postgres/backend/rewrite/: CMakeLists.txt
flex/postgres/backend/snowball/libstemmer/: api.c  stem_ISO_8859_1_basque.c  stem_ISO_8859_1_catalan.c  stem_ISO_8859_1_danish.c  stem_ISO_8859_1_dutch.c  stem_ISO_8859_1_english.c  stem_ISO_8859_1_finnish.c  stem_ISO_8859_1_french.c  stem_ISO_8859_1_german.c  stem_ISO_8859_1_indonesian.c  stem_ISO_8859_1_irish.c  stem_ISO_8859_1_italian.c  stem_ISO_8859_1_norwegian.c  stem_ISO_8859_1_porter.c  stem_ISO_8859_1_portuguese.c  stem_ISO_8859_1_spanish.c  stem_ISO_8859_1_swedish.c  stem_ISO_8859_2_hungarian.c  stem_ISO_8859_2_romanian.c  stem_KOI8_R_russian.c  stem_UTF_8_arabic.c  stem_UTF_8_armenian.c  stem_UTF_8_basque.c  stem_UTF_8_catalan.c  stem_UTF_8_danish.c  stem_UTF_8_dutch.c  stem_UTF_8_english.c  stem_UTF_8_finnish.c  stem_UTF_8_french.c  stem_UTF_8_german.c  stem_UTF_8_greek.c  stem_UTF_8_hindi.c  stem_UTF_8_hungarian.c  stem_UTF_8_indonesian.c  stem_UTF_8_irish.c  stem_UTF_8_italian.c  stem_UTF_8_lithuanian.c  stem_UTF_8_nepali.c  stem_UTF_8_norwegian.c  stem_UTF_8_porter.c  (+10 more)
flex/postgres/backend/storage/file/: fd.c
flex/postgres/backend/tcop/: postgres.c
flex/postgres/backend/timezone/: pgtz.c
flex/postgres/backend/utils/: CMakeLists.txt
flex/postgres/backend/utils/activity/: CMakeLists.txt  wait_event.c  wait_event_funcs.c
flex/postgres/backend/utils/adt/: CMakeLists.txt  levenshtein.c  like_match.c
flex/postgres/backend/utils/cache/: CMakeLists.txt
flex/postgres/backend/utils/error/: CMakeLists.txt
flex/postgres/backend/utils/fmgr/: CMakeLists.txt  dfmgr.c  fmgr.c
flex/postgres/backend/utils/hash/: CMakeLists.txt
flex/postgres/backend/utils/init/: CMakeLists.txt
flex/postgres/backend/utils/misc/: guc.c  timeout.c
flex/postgres/backend/utils/mmgr/: CMakeLists.txt
flex/postgres/backend/utils/sort/: CMakeLists.txt
flex/runtime/flex/: CMakeLists.txt
flex/runtime/flex/engines/: CMakeLists.txt
flex/runtime/flex/engines/graph_db/runtime/: CMakeLists.txt
flex/runtime/flex/engines/graph_db/runtime/adhoc/: runtime.cc  runtime.h  utils.cc  utils.h  var.cc
flex/runtime/flex/engines/graph_db/runtime/adhoc/operators/: dedup.cc  edge_expand.cc  get_v.cc  group_by.cc  intersect.cc  join.cc  load.cc  operators.h  path_expand.cc  project.cc  scan.cc  select.cc  unfold.cc
flex/runtime/flex/engines/graph_db/runtime/common/: accessors.cc  accessors.h  graph_interface.h  rt_any.cc  schema.cc  types.h
flex/runtime/flex/engines/graph_db/runtime/common/columns/: edge_columns.cc  edge_columns.h  i_context_column.h  vertex_columns.cc  vertex_columns.h  vertex_property_columns.h
flex/runtime/flex/engines/graph_db/runtime/common/operators/: dedup.cc  dedup.h  edge_expand.h  edge_expand_impl.h  join.cc  path_expand.cc  path_expand.h  path_expand_impl.cc
flex/runtime/flex/utils/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  mmap_array.h
flex/runtime/flex/utils/property/: column.h
flex/runtime/flex/utils/utils/: Makefile  cmake_install.cmake
flex/scripts/: install_dependencies.sh
flex/storages/metadata/: CMakeLists.txt  default_graph_meta_store.cc  default_graph_meta_store.h  etcd_metadata_store.cc  etcd_metadata_store.h  graph_meta_store.cc  graph_meta_store.h  metadata_store_factory.cc  metadata_store_factory.h  sqlite_metadata_store.cc  sqlite_metadata_store.h
flex/utils/: CMakeLists.txt  app_utils.cc  app_utils.h  arrow_utils.cc  arrow_utils.h  id_indexer.h  mmap_array.h  schema.cc  schema.h  service_utils.cc  service_utils.h  top_n_generator.h
interactive_engine/compiler/: Makefile  dependency-reduced-pom.xml  ic12.cypher  pom.xml
interactive_engine/groot-client/: pom.xml
proto/error/: interactive.proto
src/: CMakeLists.txt  README.md  nexg-config.in.cmake  pyproject.toml  setup.py
src/codegen/: README.md  gen_code_from_plan.cc
src/interactive/: README.md
src/otel/: otel.cc
src/utils/: CMakeLists.txt  allocators.h  app_utils.cc  arrow_utils.cc  arrow_utils.h  file_utils.cc  id_indexer.h  indexers.h  mmap_array.h  mmap_vector.h  pt_indexer.h  result.cc  result.h  service_utils.cc  service_utils.h  yaml_utils.cc  yaml_utils.h
(+1214 files in other folders)
